Fixed more alignment, name selection screen. Hooked stuff together (rudimentary).

--- a/app/styles/screen.scss
+++ b/app/styles/screen.scss
@@ -13,6 +13,7 @@ $screenColor: #e6f6f7;
 
 html, body {
     width: 100%;
+    height: 100%;
     background-color: $bodyColor;
 }
 
@@ -47,11 +48,9 @@ h4 {
     text-align: center;
 }
 
-.outer_frame {
-    width: 100%;
-    height: 100px;
-    background-color: #59a3a9;
-}
+/*
+ * MAIN.HTML
+ */
 
 .time {
     position: relative;
@@ -90,15 +89,22 @@ h4 {
     margin: 0 auto;
 }
 
+/*
+ * STATUS.HTML
+ */
+
 .expbar {
     width: 204px;
     height: 26px;
     background-image:url('../assets/images/expbar.png');
+    background-position:center;
+    position:relative;
+    top:-1px;
 }
 
 .expbar_fill {
     position:relative;
-    height: 24px;
+    height: 23px;
     margin: 10px auto 20px auto;
     background-color: #78d2da;
 }
@@ -110,26 +116,26 @@ h4 {
 }
 
 .left {
-    width:120px;
+    width:30%;
     height:100%;
-    margin: 0 0 20px 0;
-    left:50px;
-    position:relative;
+    margin: 0;
     display:inline-block;
+    vertical-align: top;
 }
 
 .right {
-    width:350px;
+    width:60%;
     height:100%;
-    left:70px;
-    top:-100px;
-    position:relative;
+    margin:0;
     display:inline-block;
+    vertical-align: top;
 }
 
 .avatar-card {
     background-image:url('../assets/images/avatar_card.png');
-    width:100%;
+    background-repeat:no-repeat;
+    margin: 0 auto;
+    width:120px;
     height:185px;
 }
 
@@ -158,17 +164,17 @@ li {
     font-family: 'Joystix';
 }
 
+/*
+ * NEWCHARACTER.HTML
+ */
+
 .typed {
     white-space: nowrap;
     overflow: hidden;
-    width: 31em;
-    -webkit-animation: type 3s steps(60, end); 
+    width: 0;
+    -webkit-animation: type 3s 2s steps(60, end) forwards; 
     display:inline-block;
 }
-
-@-webkit-keyframes type{ 
-    from { width: 0; } 
-} 
 
 span{
     width: 10px;
@@ -177,10 +183,6 @@ span{
     background-color:#fcb05e;
     display:inline-block;
     -webkit-animation: blink 1s infinite;
-}
-
-@-webkit-keyframes blink{
-    to{opacity: .0;}
 }
 
 .form-name {
@@ -202,4 +204,34 @@ span{
 
 .input-name:focus {
     outline: 0;
+}
+
+.console-name {
+    width: 93%; 
+    margin: 20px auto; 
+    background-color: #fbd1a4;
+    border: 5px solid #fcb05e;
+    box-shadow: 0 0 0 5px #fec17f inset;
+    -webkit-animation: fadein 2s forwards;
+    opacity:0;
+
+    h4 {
+        color: #e0831f;
+    }
+}
+
+/*
+ * ANIMATIONS
+ */
+
+@-webkit-keyframes type{ 
+    to { width: 32em; } 
+} 
+
+@-webkit-keyframes blink{
+    to{opacity: .0;}
+}
+
+@-webkit-keyframes fadein {
+    100%{opacity: 1;}
 }
